# AirPost_Drone

./: .gitignore  .gitmodules  README.md  run.py  run_drone_sim.py
.github/workflows/: ros2-build.yml
Actuator/: waypoint
Actuator/test/: motor.py
MQTT_Connection/: MQTT_Connection.py
catkin_ws/src/DroneNode/: CMakeLists.txt  package.xml
catkin_ws/src/DroneNode/src/: DCmotor.py  MQTT.py  MissionPlan.py
catkin_ws/src/drone_controller/: CMakeLists.txt  README.md  launch_command.txt  package.xml
catkin_ws/src/drone_controller/launch/: all_drone_control.launch
catkin_ws/src/drone_controller/scripts/: DCmotor.py  DroneController.py  MQTT.py  MissionPlan_Ros.py
catkin_ws/src/drone_controller/scripts/log/: blackbox2021-09-24 12:07:16
catkin_ws/src/drone_node/: package.xml
catkin_ws/src/drone_node/scripts/: DCmotor.py  DroneController.py  MQTT.py  MissionPlan_Dronekit.py  mavros_control.py
catkin_ws/src/ros_comm/tools/roslaunch/test/unit/: test_roslaunch_core.py
catkin_ws_build/.catkin_tools/profiles/default/: devel_collisions.txt
ros2_ws/: run_drone_ros2.sh
ros2_ws/src/airpost_drone/: package.xml  setup.cfg  setup.py
ros2_ws/src/airpost_drone/airpost_drone/: drone_node.py  dummy_camera.py  obstacle_sensor.py
ros2_ws/src/airpost_drone/launch/: all_drone_control.launch.py
scripts/: reverse_ssh_continuous.sh
sim_ros/Jetson/: GPIO.py
sim_ros/geometry_msgs/: msg.py
sim_ros/mavros_msgs/: msg.py  srv.py
sim_ros/rospy/: __init__.py
sim_ros/sensor_msgs/: msg.py
sim_ros/std_msgs/: msg.py
test/: Handler.py  dronekit.py  servo.py
